--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,7 +2,7 @@ team: Leopards
 
 manager: Nora
 
-coach: Melissa
+coach: Lupi
 
 members:
   - Linda
@@ -11,3 +11,4 @@ members:
   - Olivia
   - Evie
   - Dongho 
+ 
